# serializer version: 1
# name: TestInsight.test_insight_funnels_torql_breakdown
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT array(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person_props, 'fish'), ''), 'null'), '^"|"$', '')) AS value,
         count(*) as count
  FROM events e
  INNER JOIN
    (SELECT distinct_id,
            argMax(person_id, version) as person_id
     FROM person_distinct_id2
     WHERE team_id = 2
     GROUP BY distinct_id
     HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
  INNER JOIN
    (SELECT id,
            argMax(properties, version) as person_props
     FROM person
     WHERE team_id = 2
     GROUP BY id
     HAVING max(is_deleted) = 0 SETTINGS optimize_aggregation_in_order = 1) person ON pdi.person_id = person.id
  WHERE team_id = 2
    AND event IN ['user did things', 'user signed up']
    AND toTimeZone(timestamp, 'UTC') >= toDateTime('2012-01-08 00:00:00', 'UTC')
    AND toTimeZone(timestamp, 'UTC') <= toDateTime('2012-01-15 23:59:59', 'UTC')
    AND (and(ifNull(less(accurateCastOrNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(properties, 'int_value'), ''), 'null'), '^"|"$', ''), 'Int64'), 10), 0), 1))
  GROUP BY value
  ORDER BY count DESC, value DESC
  LIMIT 26
  OFFSET 0
  '''
# ---
# name: TestInsight.test_insight_funnels_torql_breakdown.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT countIf(steps = 1) step_1,
         countIf(steps = 2) step_2,
         avg(step_1_average_conversion_time_inner) step_1_average_conversion_time,
         median(step_1_median_conversion_time_inner) step_1_median_conversion_time,
         prop
  FROM
    (SELECT aggregation_target,
            steps,
            avg(step_1_conversion_time) step_1_average_conversion_time_inner,
            median(step_1_conversion_time) step_1_median_conversion_time_inner ,
            prop
     FROM
       (SELECT aggregation_target,
               steps,
               max(steps) over (PARTITION BY aggregation_target,
                                             prop) as max_steps,
                               step_1_conversion_time ,
                               prop
        FROM
          (SELECT *,
                  if(latest_0 <= latest_1
                     AND latest_1 <= latest_0 + INTERVAL 14 DAY, 2, 1) AS steps ,
                  if(isNotNull(latest_1)
                     AND latest_1 <= latest_0 + INTERVAL 14 DAY, dateDiff('second', toDateTime(latest_0), toDateTime(latest_1)), NULL) step_1_conversion_time,
                  prop
           FROM
             (SELECT aggregation_target, timestamp, step_0,
                                                    latest_0,
                                                    step_1,
                                                    min(latest_1) over (PARTITION by aggregation_target,
                                                                                     prop
                                                                        ORDER BY timestamp DESC ROWS BETWEEN UNBOUNDED PRECEDING AND 0 PRECEDING) latest_1 ,
                                                                       prop
              FROM
                (SELECT *,
                        if(notEmpty(arrayFilter(x -> notEmpty(x), prop_vals)), prop_vals, ['']) as prop
                 FROM
                   (SELECT e.timestamp as timestamp,
                           if(notEmpty(pdi.distinct_id), pdi.person_id, e.person_id) as aggregation_target,
                           if(notEmpty(pdi.distinct_id), pdi.person_id, e.person_id) as person_id,
                           person.person_props as person_props,
                           if(event = 'user signed up', 1, 0) as step_0,
                           if(step_0 = 1, timestamp, null) as latest_0,
                           if(event = 'user did things', 1, 0) as step_1,
                           if(step_1 = 1, timestamp, null) as latest_1,
                           array(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person_props, 'fish'), ''), 'null'), '^"|"$', '')) AS prop_basic,
                           prop_basic as prop,
                           argMinIf(prop, timestamp, notEmpty(arrayFilter(x -> notEmpty(x), prop))) over (PARTITION by aggregation_target) as prop_vals
                    FROM events e
                    LEFT OUTER JOIN
                      (SELECT distinct_id,
                              argMax(person_id, version) as person_id
                       FROM person_distinct_id2
                       WHERE team_id = 2
                         AND distinct_id IN
                           (SELECT distinct_id
                            FROM events
                            WHERE team_id = 2
                              AND event IN ['user did things', 'user signed up']
                              AND toTimeZone(timestamp, 'UTC') >= toDateTime('2012-01-08 00:00:00', 'UTC')
                              AND toTimeZone(timestamp, 'UTC') <= toDateTime('2012-01-15 23:59:59', 'UTC') )
                       GROUP BY distinct_id
                       HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
                    INNER JOIN
                      (SELECT id,
                              argMax(properties, version) as person_props
                       FROM person
                       WHERE team_id = 2
                       GROUP BY id
                       HAVING max(is_deleted) = 0 SETTINGS optimize_aggregation_in_order = 1) person ON person.id = pdi.person_id
                    WHERE team_id = 2
                      AND event IN ['user did things', 'user signed up']
                      AND toTimeZone(timestamp, 'UTC') >= toDateTime('2012-01-08 00:00:00', 'UTC')
                      AND toTimeZone(timestamp, 'UTC') <= toDateTime('2012-01-15 23:59:59', 'UTC')
                      AND (and(ifNull(less(accurateCastOrNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(properties, 'int_value'), ''), 'null'), '^"|"$', ''), 'Int64'), 10), 0), 1))
                      AND (step_0 = 1
                           OR step_1 = 1) )))
           WHERE step_0 = 1 ))
     GROUP BY aggregation_target,
              steps,
              prop
     HAVING steps = max_steps)
  GROUP BY prop
  '''
# ---
# name: TestInsight.test_insight_funnels_torql_global_filters
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT countIf(steps = 1) step_1,
         countIf(steps = 2) step_2,
         avg(step_1_average_conversion_time_inner) step_1_average_conversion_time,
         median(step_1_median_conversion_time_inner) step_1_median_conversion_time
  FROM
    (SELECT aggregation_target,
            steps,
            avg(step_1_conversion_time) step_1_average_conversion_time_inner,
            median(step_1_conversion_time) step_1_median_conversion_time_inner
     FROM
       (SELECT aggregation_target,
               steps,
               max(steps) over (PARTITION BY aggregation_target) as max_steps,
                               step_1_conversion_time
        FROM
          (SELECT *,
                  if(latest_0 <= latest_1
                     AND latest_1 <= latest_0 + INTERVAL 14 DAY, 2, 1) AS steps ,
                  if(isNotNull(latest_1)
                     AND latest_1 <= latest_0 + INTERVAL 14 DAY, dateDiff('second', toDateTime(latest_0), toDateTime(latest_1)), NULL) step_1_conversion_time
           FROM
             (SELECT aggregation_target, timestamp, step_0,
                                                    latest_0,
                                                    step_1,
                                                    min(latest_1) over (PARTITION by aggregation_target
                                                                        ORDER BY timestamp DESC ROWS BETWEEN UNBOUNDED PRECEDING AND 0 PRECEDING) latest_1
              FROM
                (SELECT e.timestamp as timestamp,
                        if(notEmpty(pdi.distinct_id), pdi.person_id, e.person_id) as aggregation_target,
                        if(notEmpty(pdi.distinct_id), pdi.person_id, e.person_id) as person_id,
                        person.person_props as person_props,
                        if(event = 'user signed up', 1, 0) as step_0,
                        if(step_0 = 1, timestamp, null) as latest_0,
                        if(event = 'user did things', 1, 0) as step_1,
                        if(step_1 = 1, timestamp, null) as latest_1
                 FROM events e
                 LEFT OUTER JOIN
                   (SELECT distinct_id,
                           argMax(person_id, version) as person_id
                    FROM person_distinct_id2
                    WHERE team_id = 2
                      AND distinct_id IN
                        (SELECT distinct_id
                         FROM events
                         WHERE team_id = 2
                           AND event IN ['user did things', 'user signed up']
                           AND toTimeZone(timestamp, 'UTC') >= toDateTime('2012-01-08 00:00:00', 'UTC')
                           AND toTimeZone(timestamp, 'UTC') <= toDateTime('2012-01-15 23:59:59', 'UTC') )
                    GROUP BY distinct_id
                    HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
                 INNER JOIN
                   (SELECT id,
                           argMax(properties, version) as person_props
                    FROM person
                    WHERE team_id = 2
                    GROUP BY id
                    HAVING max(is_deleted) = 0 SETTINGS optimize_aggregation_in_order = 1) person ON person.id = pdi.person_id
                 WHERE team_id = 2
                   AND event IN ['user did things', 'user signed up']
                   AND toTimeZone(timestamp, 'UTC') >= toDateTime('2012-01-08 00:00:00', 'UTC')
                   AND toTimeZone(timestamp, 'UTC') <= toDateTime('2012-01-15 23:59:59', 'UTC')
                   AND ((and(ifNull(less(accurateCastOrNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(properties, 'int_value'), ''), 'null'), '^"|"$', ''), 'Int64'), 10), 0), 1))
                        AND (ifNull(like(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person_props, 'fish'), ''), 'null'), '^"|"$', ''), '%fish%'), 0)))
                   AND (step_0 = 1
                        OR step_1 = 1) ))
           WHERE step_0 = 1 ))
     GROUP BY aggregation_target,
              steps
     HAVING steps = max_steps)
  '''
# ---
# name: TestInsight.test_insight_funnels_torql_local_filters
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT countIf(steps = 1) step_1,
         countIf(steps = 2) step_2,
         avg(step_1_average_conversion_time_inner) step_1_average_conversion_time,
         median(step_1_median_conversion_time_inner) step_1_median_conversion_time
  FROM
    (SELECT aggregation_target,
            steps,
            avg(step_1_conversion_time) step_1_average_conversion_time_inner,
            median(step_1_conversion_time) step_1_median_conversion_time_inner
     FROM
       (SELECT aggregation_target,
               steps,
               max(steps) over (PARTITION BY aggregation_target) as max_steps,
                               step_1_conversion_time
        FROM
          (SELECT *,
                  if(latest_0 <= latest_1
                     AND latest_1 <= latest_0 + INTERVAL 14 DAY, 2, 1) AS steps ,
                  if(isNotNull(latest_1)
                     AND latest_1 <= latest_0 + INTERVAL 14 DAY, dateDiff('second', toDateTime(latest_0), toDateTime(latest_1)), NULL) step_1_conversion_time
           FROM
             (SELECT aggregation_target, timestamp, step_0,
                                                    latest_0,
                                                    step_1,
                                                    min(latest_1) over (PARTITION by aggregation_target
                                                                        ORDER BY timestamp DESC ROWS BETWEEN UNBOUNDED PRECEDING AND 0 PRECEDING) latest_1
              FROM
                (SELECT e.timestamp as timestamp,
                        if(notEmpty(pdi.distinct_id), pdi.person_id, e.person_id) as aggregation_target,
                        if(notEmpty(pdi.distinct_id), pdi.person_id, e.person_id) as person_id,
                        person.person_props as person_props,
                        if(event = 'user signed up'
                           AND (and(ifNull(less(accurateCastOrNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(properties, 'int_value'), ''), 'null'), '^"|"$', ''), 'Int64'), 10), 0), 1)
                                AND ifNull(like(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person_props, 'fish'), ''), 'null'), '^"|"$', ''), '%fish%'), 0)), 1, 0) as step_0,
                        if(step_0 = 1, timestamp, null) as latest_0,
                        if(event = 'user did things'
                           AND (and(ifNull(less(accurateCastOrNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(properties, 'int_value'), ''), 'null'), '^"|"$', ''), 'Int64'), 10), 0), 1)
                                AND ifNull(like(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person_props, 'fish'), ''), 'null'), '^"|"$', ''), '%fish%'), 0)), 1, 0) as step_1,
                        if(step_1 = 1, timestamp, null) as latest_1
                 FROM events e
                 LEFT OUTER JOIN
                   (SELECT distinct_id,
                           argMax(person_id, version) as person_id
                    FROM person_distinct_id2
                    WHERE team_id = 2
                      AND distinct_id IN
                        (SELECT distinct_id
                         FROM events
                         WHERE team_id = 2
                           AND event IN ['user did things', 'user signed up']
                           AND toTimeZone(timestamp, 'UTC') >= toDateTime('2012-01-08 00:00:00', 'UTC')
                           AND toTimeZone(timestamp, 'UTC') <= toDateTime('2012-01-15 23:59:59', 'UTC') )
                    GROUP BY distinct_id
                    HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
                 INNER JOIN
                   (SELECT id,
                           argMax(properties, version) as person_props
                    FROM person
                    WHERE team_id = 2
                    GROUP BY id
                    HAVING max(is_deleted) = 0 SETTINGS optimize_aggregation_in_order = 1) person ON person.id = pdi.person_id
                 WHERE team_id = 2
                   AND event IN ['user did things', 'user signed up']
                   AND toTimeZone(timestamp, 'UTC') >= toDateTime('2012-01-08 00:00:00', 'UTC')
                   AND toTimeZone(timestamp, 'UTC') <= toDateTime('2012-01-15 23:59:59', 'UTC')
                   AND (step_0 = 1
                        OR step_1 = 1) ))
           WHERE step_0 = 1 ))
     GROUP BY aggregation_target,
              steps
     HAVING steps = max_steps)
  '''
# ---
# name: TestInsight.test_insight_trend_torql_breakdown
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT if(ifNull(less(accurateCastOrNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(properties, 'int_value'), ''), 'null'), '^"|"$', ''), 'Int64'), 10), 0), 'le%ss', 'more') AS value,
         count(*) as count
  FROM events e
  WHERE team_id = 2
    AND event = '$pageview'
    AND toTimeZone(timestamp, 'UTC') >= toDateTime('2012-01-08 00:00:00', 'UTC')
    AND toTimeZone(timestamp, 'UTC') <= toDateTime('2012-01-15 23:59:59', 'UTC')
  GROUP BY value
  ORDER BY count DESC, value DESC
  LIMIT 26
  OFFSET 0
  '''
# ---
# name: TestInsight.test_insight_trend_torql_breakdown.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT groupArray(day_start) as date,
         groupArray(count) AS total,
         breakdown_value
  FROM
    (SELECT SUM(total) as count,
            day_start,
            breakdown_value
     FROM
       (SELECT *
        FROM
          (SELECT toUInt16(0) AS total,
                  ticks.day_start as day_start,
                  breakdown_value
           FROM
             (SELECT toStartOfDay(toDateTime('2012-01-15 23:59:59', 'UTC')) - toIntervalDay(number) as day_start
              FROM numbers(8)
              UNION ALL SELECT toStartOfDay(toDateTime('2012-01-08 00:00:00', 'UTC')) as day_start) as ticks
           CROSS JOIN
             (SELECT breakdown_value
              FROM
                (SELECT ['more', 'le%ss'] as breakdown_value) ARRAY
              JOIN breakdown_value) as sec
           ORDER BY breakdown_value,
                    day_start
           UNION ALL SELECT count(*) as total,
                            toStartOfDay(toTimeZone(toDateTime(timestamp, 'UTC'), 'UTC')) as day_start,
                            transform(ifNull(nullIf(if(ifNull(less(accurateCastOrNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(properties, 'int_value'), ''), 'null'), '^"|"$', ''), 'Int64'), 10), 0), 'le%ss', 'more'), ''), '$$_markettor_breakdown_null_$$'), (['more', 'le%ss']), (['more', 'le%ss']), '$$_markettor_breakdown_other_$$') as breakdown_value
           FROM events e
           WHERE e.team_id = 2
             AND event = '$pageview'
             AND toTimeZone(timestamp, 'UTC') >= toDateTime(toStartOfDay(toDateTime('2012-01-08 00:00:00', 'UTC')), 'UTC')
             AND toTimeZone(timestamp, 'UTC') <= toDateTime('2012-01-15 23:59:59', 'UTC')
           GROUP BY day_start,
                    breakdown_value))
     GROUP BY day_start,
              breakdown_value
     ORDER BY breakdown_value,
              day_start)
  GROUP BY breakdown_value
  ORDER BY breakdown_value
  '''
# ---
# name: TestInsight.test_insight_trend_torql_breakdown_materialized
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT if(ifNull(less(accurateCastOrNull(nullIf(nullIf(events.mat_int_value, ''), 'null'), 'Int64'), 10), 0), 'le%ss', 'more') AS value,
         count(*) as count
  FROM events e
  WHERE team_id = 2
    AND event = '$pageview'
    AND toTimeZone(timestamp, 'UTC') >= toDateTime('2012-01-08 00:00:00', 'UTC')
    AND toTimeZone(timestamp, 'UTC') <= toDateTime('2012-01-15 23:59:59', 'UTC')
  GROUP BY value
  ORDER BY count DESC, value DESC
  LIMIT 26
  OFFSET 0
  '''
# ---
# name: TestInsight.test_insight_trend_torql_breakdown_materialized.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT groupArray(day_start) as date,
         groupArray(count) AS total,
         breakdown_value
  FROM
    (SELECT SUM(total) as count,
            day_start,
            breakdown_value
     FROM
       (SELECT *
        FROM
          (SELECT toUInt16(0) AS total,
                  ticks.day_start as day_start,
                  breakdown_value
           FROM
             (SELECT toStartOfDay(toDateTime('2012-01-15 23:59:59', 'UTC')) - toIntervalDay(number) as day_start
              FROM numbers(8)
              UNION ALL SELECT toStartOfDay(toDateTime('2012-01-08 00:00:00', 'UTC')) as day_start) as ticks
           CROSS JOIN
             (SELECT breakdown_value
              FROM
                (SELECT ['more', 'le%ss'] as breakdown_value) ARRAY
              JOIN breakdown_value) as sec
           ORDER BY breakdown_value,
                    day_start
           UNION ALL SELECT count(*) as total,
                            toStartOfDay(toTimeZone(toDateTime(timestamp, 'UTC'), 'UTC')) as day_start,
                            transform(ifNull(nullIf(if(ifNull(less(accurateCastOrNull(nullIf(nullIf(events.mat_int_value, ''), 'null'), 'Int64'), 10), 0), 'le%ss', 'more'), ''), '$$_markettor_breakdown_null_$$'), (['more', 'le%ss']), (['more', 'le%ss']), '$$_markettor_breakdown_other_$$') as breakdown_value
           FROM events e
           WHERE e.team_id = 2
             AND event = '$pageview'
             AND toTimeZone(timestamp, 'UTC') >= toDateTime(toStartOfDay(toDateTime('2012-01-08 00:00:00', 'UTC')), 'UTC')
             AND toTimeZone(timestamp, 'UTC') <= toDateTime('2012-01-15 23:59:59', 'UTC')
           GROUP BY day_start,
                    breakdown_value))
     GROUP BY day_start,
              breakdown_value
     ORDER BY breakdown_value,
              day_start)
  GROUP BY breakdown_value
  ORDER BY breakdown_value
  '''
# ---
# name: TestInsight.test_insight_trend_torql_global_filters
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT groupArray(day_start) as date,
         groupArray(count) AS total
  FROM
    (SELECT SUM(total) AS count,
            day_start
     FROM
       (SELECT toUInt16(0) AS total,
               toStartOfDay(toDateTime('2012-01-15 23:59:59', 'UTC')) - toIntervalDay(number) AS day_start
        FROM numbers(dateDiff('day', toStartOfDay(toDateTime('2012-01-08 00:00:00', 'UTC')), toDateTime('2012-01-15 23:59:59', 'UTC')))
        UNION ALL SELECT toUInt16(0) AS total,
                         toStartOfDay(toDateTime('2012-01-08 00:00:00', 'UTC'))
        UNION ALL SELECT count(*) AS total,
                         toStartOfDay(toTimeZone(toDateTime(timestamp, 'UTC'), 'UTC')) AS date
        FROM events e
        WHERE team_id = 2
          AND event = '$pageview'
          AND toTimeZone(timestamp, 'UTC') >= toDateTime(toStartOfDay(toDateTime('2012-01-08 00:00:00', 'UTC')), 'UTC')
          AND toTimeZone(timestamp, 'UTC') <= toDateTime('2012-01-15 23:59:59', 'UTC')
        GROUP BY date)
     GROUP BY day_start
     ORDER BY day_start)
  '''
# ---
# name: TestInsight.test_insight_trend_torql_global_filters.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT groupArray(day_start) as date,
         groupArray(count) AS total
  FROM
    (SELECT SUM(total) AS count,
            day_start
     FROM
       (SELECT toUInt16(0) AS total,
               toStartOfDay(toDateTime('2012-01-15 23:59:59', 'UTC')) - toIntervalDay(number) AS day_start
        FROM numbers(dateDiff('day', toStartOfDay(toDateTime('2012-01-08 00:00:00', 'UTC')), toDateTime('2012-01-15 23:59:59', 'UTC')))
        UNION ALL SELECT toUInt16(0) AS total,
                         toStartOfDay(toDateTime('2012-01-08 00:00:00', 'UTC'))
        UNION ALL SELECT count(*) AS total,
                         toStartOfDay(toTimeZone(toDateTime(timestamp, 'UTC'), 'UTC')) AS date
        FROM events e
        LEFT OUTER JOIN
          (SELECT distinct_id,
                  argMax(person_id, version) as person_id
           FROM person_distinct_id2
           WHERE team_id = 2
             AND distinct_id IN
               (SELECT distinct_id
                FROM events
                WHERE team_id = 2
                  AND event = '$pageview'
                  AND toTimeZone(timestamp, 'UTC') >= toDateTime(toStartOfDay(toDateTime('2012-01-08 00:00:00', 'UTC')), 'UTC')
                  AND toTimeZone(timestamp, 'UTC') <= toDateTime('2012-01-15 23:59:59', 'UTC'))
           GROUP BY distinct_id
           HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
        INNER JOIN
          (SELECT id,
                  argMax(properties, version) as person_props
           FROM person
           WHERE team_id = 2
           GROUP BY id
           HAVING max(is_deleted) = 0 SETTINGS optimize_aggregation_in_order = 1) person ON person.id = pdi.person_id
        WHERE team_id = 2
          AND event = '$pageview'
          AND toTimeZone(timestamp, 'UTC') >= toDateTime(toStartOfDay(toDateTime('2012-01-08 00:00:00', 'UTC')), 'UTC')
          AND toTimeZone(timestamp, 'UTC') <= toDateTime('2012-01-15 23:59:59', 'UTC')
          AND ((and(ifNull(greater(accurateCastOrNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(properties, 'int_value'), ''), 'null'), '^"|"$', ''), 'Int64'), 10), 0), 1))
               AND (ifNull(like(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person_props, 'fish'), ''), 'null'), '^"|"$', ''), '%fish%'), 0)))
        GROUP BY date)
     GROUP BY day_start
     ORDER BY day_start)
  '''
# ---
# name: TestInsight.test_insight_trend_torql_global_filters_materialized
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT groupArray(day_start) as date,
         groupArray(count) AS total
  FROM
    (SELECT SUM(total) AS count,
            day_start
     FROM
       (SELECT toUInt16(0) AS total,
               toStartOfDay(toDateTime('2012-01-15 23:59:59', 'UTC')) - toIntervalDay(number) AS day_start
        FROM numbers(dateDiff('day', toStartOfDay(toDateTime('2012-01-08 00:00:00', 'UTC')), toDateTime('2012-01-15 23:59:59', 'UTC')))
        UNION ALL SELECT toUInt16(0) AS total,
                         toStartOfDay(toDateTime('2012-01-08 00:00:00', 'UTC'))
        UNION ALL SELECT count(*) AS total,
                         toStartOfDay(toTimeZone(toDateTime(timestamp, 'UTC'), 'UTC')) AS date
        FROM events e
        WHERE team_id = 2
          AND event = '$pageview'
          AND toTimeZone(timestamp, 'UTC') >= toDateTime(toStartOfDay(toDateTime('2012-01-08 00:00:00', 'UTC')), 'UTC')
          AND toTimeZone(timestamp, 'UTC') <= toDateTime('2012-01-15 23:59:59', 'UTC')
        GROUP BY date)
     GROUP BY day_start
     ORDER BY day_start)
  '''
# ---
# name: TestInsight.test_insight_trend_torql_global_filters_materialized.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT groupArray(day_start) as date,
         groupArray(count) AS total
  FROM
    (SELECT SUM(total) AS count,
            day_start
     FROM
       (SELECT toUInt16(0) AS total,
               toStartOfDay(toDateTime('2012-01-15 23:59:59', 'UTC')) - toIntervalDay(number) AS day_start
        FROM numbers(dateDiff('day', toStartOfDay(toDateTime('2012-01-08 00:00:00', 'UTC')), toDateTime('2012-01-15 23:59:59', 'UTC')))
        UNION ALL SELECT toUInt16(0) AS total,
                         toStartOfDay(toDateTime('2012-01-08 00:00:00', 'UTC'))
        UNION ALL SELECT count(*) AS total,
                         toStartOfDay(toTimeZone(toDateTime(timestamp, 'UTC'), 'UTC')) AS date
        FROM events e
        LEFT OUTER JOIN
          (SELECT distinct_id,
                  argMax(person_id, version) as person_id
           FROM person_distinct_id2
           WHERE team_id = 2
             AND distinct_id IN
               (SELECT distinct_id
                FROM events
                WHERE team_id = 2
                  AND event = '$pageview'
                  AND toTimeZone(timestamp, 'UTC') >= toDateTime(toStartOfDay(toDateTime('2012-01-08 00:00:00', 'UTC')), 'UTC')
                  AND toTimeZone(timestamp, 'UTC') <= toDateTime('2012-01-15 23:59:59', 'UTC'))
           GROUP BY distinct_id
           HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
        INNER JOIN
          (SELECT id,
                  argMax(pmat_fish, version) as pmat_fish
           FROM person
           WHERE team_id = 2
           GROUP BY id
           HAVING max(is_deleted) = 0 SETTINGS optimize_aggregation_in_order = 1) person ON person.id = pdi.person_id
        WHERE team_id = 2
          AND event = '$pageview'
          AND toTimeZone(timestamp, 'UTC') >= toDateTime(toStartOfDay(toDateTime('2012-01-08 00:00:00', 'UTC')), 'UTC')
          AND toTimeZone(timestamp, 'UTC') <= toDateTime('2012-01-15 23:59:59', 'UTC')
          AND ((and(ifNull(greater(accurateCastOrNull(nullIf(nullIf(events.mat_int_value, ''), 'null'), 'Int64'), 10), 0), 1))
               AND (ifNull(like(nullIf(nullIf(pmat_fish, ''), 'null'), '%fish%'), 0)))
        GROUP BY date)
     GROUP BY day_start
     ORDER BY day_start)
  '''
# ---
# name: TestInsight.test_insight_trend_torql_local_filters
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT groupArray(day_start) as date,
         groupArray(count) AS total
  FROM
    (SELECT SUM(total) AS count,
            day_start
     FROM
       (SELECT toUInt16(0) AS total,
               toStartOfDay(toDateTime('2012-01-15 23:59:59', 'UTC')) - toIntervalDay(number) AS day_start
        FROM numbers(dateDiff('day', toStartOfDay(toDateTime('2012-01-08 00:00:00', 'UTC')), toDateTime('2012-01-15 23:59:59', 'UTC')))
        UNION ALL SELECT toUInt16(0) AS total,
                         toStartOfDay(toDateTime('2012-01-08 00:00:00', 'UTC'))
        UNION ALL SELECT count(*) AS total,
                         toStartOfDay(toTimeZone(toDateTime(timestamp, 'UTC'), 'UTC')) AS date
        FROM events e
        LEFT OUTER JOIN
          (SELECT distinct_id,
                  argMax(person_id, version) as person_id
           FROM person_distinct_id2
           WHERE team_id = 2
             AND distinct_id IN
               (SELECT distinct_id
                FROM events
                WHERE team_id = 2
                  AND event = '$pageview'
                  AND toTimeZone(timestamp, 'UTC') >= toDateTime(toStartOfDay(toDateTime('2012-01-08 00:00:00', 'UTC')), 'UTC')
                  AND toTimeZone(timestamp, 'UTC') <= toDateTime('2012-01-15 23:59:59', 'UTC'))
           GROUP BY distinct_id
           HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
        INNER JOIN
          (SELECT id,
                  argMax(properties, version) as person_props
           FROM person
           WHERE team_id = 2
           GROUP BY id
           HAVING max(is_deleted) = 0 SETTINGS optimize_aggregation_in_order = 1) person ON person.id = pdi.person_id
        WHERE team_id = 2
          AND event = '$pageview'
          AND toTimeZone(timestamp, 'UTC') >= toDateTime(toStartOfDay(toDateTime('2012-01-08 00:00:00', 'UTC')), 'UTC')
          AND toTimeZone(timestamp, 'UTC') <= toDateTime('2012-01-15 23:59:59', 'UTC')
          AND (and(ifNull(less(accurateCastOrNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(properties, 'int_value'), ''), 'null'), '^"|"$', ''), 'Int64'), 10), 0), 1)
               AND ifNull(like(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person_props, 'fish'), ''), 'null'), '^"|"$', ''), '%fish%'), 0))
        GROUP BY date)
     GROUP BY day_start
     ORDER BY day_start)
  '''
# ---
# name: TestInsight.test_insight_trend_torql_local_filters_materialized
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT groupArray(day_start) as date,
         groupArray(count) AS total
  FROM
    (SELECT SUM(total) AS count,
            day_start
     FROM
       (SELECT toUInt16(0) AS total,
               toStartOfDay(toDateTime('2012-01-15 23:59:59', 'UTC')) - toIntervalDay(number) AS day_start
        FROM numbers(dateDiff('day', toStartOfDay(toDateTime('2012-01-08 00:00:00', 'UTC')), toDateTime('2012-01-15 23:59:59', 'UTC')))
        UNION ALL SELECT toUInt16(0) AS total,
                         toStartOfDay(toDateTime('2012-01-08 00:00:00', 'UTC'))
        UNION ALL SELECT count(*) AS total,
                         toStartOfDay(toTimeZone(toDateTime(timestamp, 'UTC'), 'UTC')) AS date
        FROM events e
        LEFT OUTER JOIN
          (SELECT distinct_id,
                  argMax(person_id, version) as person_id
           FROM person_distinct_id2
           WHERE team_id = 2
             AND distinct_id IN
               (SELECT distinct_id
                FROM events
                WHERE team_id = 2
                  AND event = '$pageview'
                  AND toTimeZone(timestamp, 'UTC') >= toDateTime(toStartOfDay(toDateTime('2012-01-08 00:00:00', 'UTC')), 'UTC')
                  AND toTimeZone(timestamp, 'UTC') <= toDateTime('2012-01-15 23:59:59', 'UTC'))
           GROUP BY distinct_id
           HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
        INNER JOIN
          (SELECT id,
                  argMax(pmat_fish, version) as pmat_fish
           FROM person
           WHERE team_id = 2
           GROUP BY id
           HAVING max(is_deleted) = 0 SETTINGS optimize_aggregation_in_order = 1) person ON person.id = pdi.person_id
        WHERE team_id = 2
          AND event = '$pageview'
          AND toTimeZone(timestamp, 'UTC') >= toDateTime(toStartOfDay(toDateTime('2012-01-08 00:00:00', 'UTC')), 'UTC')
          AND toTimeZone(timestamp, 'UTC') <= toDateTime('2012-01-15 23:59:59', 'UTC')
          AND (and(ifNull(less(accurateCastOrNull(nullIf(nullIf(events.mat_int_value, ''), 'null'), 'Int64'), 10), 0), 1)
               AND ifNull(like(nullIf(nullIf(pmat_fish, ''), 'null'), '%fish%'), 0))
        GROUP BY date)
     GROUP BY day_start
     ORDER BY day_start)
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1
  '''
  SELECT "markettor_user"."id",
         "markettor_user"."password",
         "markettor_user"."last_login",
         "markettor_user"."first_name",
         "markettor_user"."last_name",
         "markettor_user"."is_staff",
         "markettor_user"."is_active",
         "markettor_user"."date_joined",
         "markettor_user"."uuid",
         "markettor_user"."current_organization_id",
         "markettor_user"."current_team_id",
         "markettor_user"."email",
         "markettor_user"."pending_email",
         "markettor_user"."temporary_token",
         "markettor_user"."distinct_id",
         "markettor_user"."is_email_verified",
         "markettor_user"."has_seen_product_intro_for",
         "markettor_user"."strapi_id",
         "markettor_user"."theme_mode",
         "markettor_user"."partial_notification_settings",
         "markettor_user"."anonymize_data",
         "markettor_user"."toolbar_mode",
         "markettor_user"."hedgehog_config",
         "markettor_user"."events_column_config",
         "markettor_user"."email_opt_in"
  FROM "markettor_user"
  WHERE "markettor_user"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.1
  '''
  SELECT "markettor_team"."id",
         "markettor_team"."uuid",
         "markettor_team"."organization_id",
         "markettor_team"."project_id",
         "markettor_team"."api_token",
         "markettor_team"."app_urls",
         "markettor_team"."name",
         "markettor_team"."slack_incoming_webhook",
         "markettor_team"."created_at",
         "markettor_team"."updated_at",
         "markettor_team"."anonymize_ips",
         "markettor_team"."completed_snippet_onboarding",
         "markettor_team"."has_completed_onboarding_for",
         "markettor_team"."ingested_event",
         "markettor_team"."autocapture_opt_out",
         "markettor_team"."autocapture_web_vitals_opt_in",
         "markettor_team"."autocapture_web_vitals_allowed_metrics",
         "markettor_team"."autocapture_exceptions_opt_in",
         "markettor_team"."autocapture_exceptions_errors_to_ignore",
         "markettor_team"."session_recording_opt_in",
         "markettor_team"."session_recording_sample_rate",
         "markettor_team"."session_recording_minimum_duration_milliseconds",
         "markettor_team"."session_recording_linked_flag",
         "markettor_team"."session_recording_network_payload_capture_config",
         "markettor_team"."session_replay_config",
         "markettor_team"."capture_console_log_opt_in",
         "markettor_team"."capture_performance_opt_in",
         "markettor_team"."surveys_opt_in",
         "markettor_team"."heatmaps_opt_in",
         "markettor_team"."session_recording_version",
         "markettor_team"."signup_token",
         "markettor_team"."is_demo",
         "markettor_team"."access_control",
         "markettor_team"."week_start_day",
         "markettor_team"."inject_web_apps",
         "markettor_team"."test_account_filters",
         "markettor_team"."test_account_filters_default_checked",
         "markettor_team"."path_cleaning_filters",
         "markettor_team"."timezone",
         "markettor_team"."data_attributes",
         "markettor_team"."person_display_name_properties",
         "markettor_team"."live_events_columns",
         "markettor_team"."recording_domains",
         "markettor_team"."primary_dashboard_id",
         "markettor_team"."extra_settings",
         "markettor_team"."modifiers",
         "markettor_team"."correlation_config",
         "markettor_team"."session_recording_retention_period_days",
         "markettor_team"."external_data_workspace_id",
         "markettor_team"."external_data_workspace_last_synced_at"
  FROM "markettor_team"
  WHERE "markettor_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.10
  '''
  SELECT "markettor_team"."id",
         "markettor_team"."uuid",
         "markettor_team"."organization_id",
         "markettor_team"."project_id",
         "markettor_team"."api_token",
         "markettor_team"."app_urls",
         "markettor_team"."name",
         "markettor_team"."slack_incoming_webhook",
         "markettor_team"."created_at",
         "markettor_team"."updated_at",
         "markettor_team"."anonymize_ips",
         "markettor_team"."completed_snippet_onboarding",
         "markettor_team"."has_completed_onboarding_for",
         "markettor_team"."ingested_event",
         "markettor_team"."autocapture_opt_out",
         "markettor_team"."autocapture_web_vitals_opt_in",
         "markettor_team"."autocapture_web_vitals_allowed_metrics",
         "markettor_team"."autocapture_exceptions_opt_in",
         "markettor_team"."autocapture_exceptions_errors_to_ignore",
         "markettor_team"."session_recording_opt_in",
         "markettor_team"."session_recording_sample_rate",
         "markettor_team"."session_recording_minimum_duration_milliseconds",
         "markettor_team"."session_recording_linked_flag",
         "markettor_team"."session_recording_network_payload_capture_config",
         "markettor_team"."session_replay_config",
         "markettor_team"."capture_console_log_opt_in",
         "markettor_team"."capture_performance_opt_in",
         "markettor_team"."surveys_opt_in",
         "markettor_team"."heatmaps_opt_in",
         "markettor_team"."session_recording_version",
         "markettor_team"."signup_token",
         "markettor_team"."is_demo",
         "markettor_team"."access_control",
         "markettor_team"."week_start_day",
         "markettor_team"."inject_web_apps",
         "markettor_team"."test_account_filters",
         "markettor_team"."test_account_filters_default_checked",
         "markettor_team"."path_cleaning_filters",
         "markettor_team"."timezone",
         "markettor_team"."data_attributes",
         "markettor_team"."person_display_name_properties",
         "markettor_team"."live_events_columns",
         "markettor_team"."recording_domains",
         "markettor_team"."primary_dashboard_id",
         "markettor_team"."extra_settings",
         "markettor_team"."modifiers",
         "markettor_team"."correlation_config",
         "markettor_team"."session_recording_retention_period_days",
         "markettor_team"."external_data_workspace_id",
         "markettor_team"."external_data_workspace_last_synced_at"
  FROM "markettor_team"
  WHERE "markettor_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.11
  '''
  SELECT "markettor_dashboardtile"."id",
         "markettor_dashboardtile"."dashboard_id",
         "markettor_dashboardtile"."insight_id",
         "markettor_dashboardtile"."text_id",
         "markettor_dashboardtile"."layouts",
         "markettor_dashboardtile"."color",
         "markettor_dashboardtile"."filters_hash",
         "markettor_dashboardtile"."last_refresh",
         "markettor_dashboardtile"."refreshing",
         "markettor_dashboardtile"."refresh_attempt",
         "markettor_dashboardtile"."deleted"
  FROM "markettor_dashboardtile"
  WHERE "markettor_dashboardtile"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.12
  '''
  SELECT "markettor_dashboarditem"."id",
         "markettor_dashboarditem"."name",
         "markettor_dashboarditem"."derived_name",
         "markettor_dashboarditem"."description",
         "markettor_dashboarditem"."team_id",
         "markettor_dashboarditem"."filters",
         "markettor_dashboarditem"."filters_hash",
         "markettor_dashboarditem"."query",
         "markettor_dashboarditem"."order",
         "markettor_dashboarditem"."deleted",
         "markettor_dashboarditem"."saved",
         "markettor_dashboarditem"."created_at",
         "markettor_dashboarditem"."refreshing",
         "markettor_dashboarditem"."created_by_id",
         "markettor_dashboarditem"."is_sample",
         "markettor_dashboarditem"."short_id",
         "markettor_dashboarditem"."favorited",
         "markettor_dashboarditem"."refresh_attempt",
         "markettor_dashboarditem"."last_modified_at",
         "markettor_dashboarditem"."last_modified_by_id",
         "markettor_dashboarditem"."dashboard_id",
         "markettor_dashboarditem"."last_refresh",
         "markettor_dashboarditem"."layouts",
         "markettor_dashboarditem"."color",
         "markettor_dashboarditem"."dive_dashboard_id",
         "markettor_dashboarditem"."updated_at",
         "markettor_dashboarditem"."deprecated_tags",
         "markettor_dashboarditem"."tags"
  FROM "markettor_dashboarditem"
  WHERE "markettor_dashboarditem"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.13
  '''
  SELECT "markettor_dashboard"."id",
         "markettor_dashboard"."name",
         "markettor_dashboard"."description",
         "markettor_dashboard"."team_id",
         "markettor_dashboard"."pinned",
         "markettor_dashboard"."created_at",
         "markettor_dashboard"."created_by_id",
         "markettor_dashboard"."deleted",
         "markettor_dashboard"."last_accessed_at",
         "markettor_dashboard"."filters",
         "markettor_dashboard"."creation_mode",
         "markettor_dashboard"."restriction_level",
         "markettor_dashboard"."deprecated_tags",
         "markettor_dashboard"."tags",
         "markettor_dashboard"."share_token",
         "markettor_dashboard"."is_shared"
  FROM "markettor_dashboard"
  WHERE "markettor_dashboard"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.14
  '''
  SELECT "markettor_team"."id",
         "markettor_team"."uuid",
         "markettor_team"."organization_id",
         "markettor_team"."project_id",
         "markettor_team"."api_token",
         "markettor_team"."app_urls",
         "markettor_team"."name",
         "markettor_team"."slack_incoming_webhook",
         "markettor_team"."created_at",
         "markettor_team"."updated_at",
         "markettor_team"."anonymize_ips",
         "markettor_team"."completed_snippet_onboarding",
         "markettor_team"."has_completed_onboarding_for",
         "markettor_team"."ingested_event",
         "markettor_team"."autocapture_opt_out",
         "markettor_team"."autocapture_web_vitals_opt_in",
         "markettor_team"."autocapture_web_vitals_allowed_metrics",
         "markettor_team"."autocapture_exceptions_opt_in",
         "markettor_team"."autocapture_exceptions_errors_to_ignore",
         "markettor_team"."session_recording_opt_in",
         "markettor_team"."session_recording_sample_rate",
         "markettor_team"."session_recording_minimum_duration_milliseconds",
         "markettor_team"."session_recording_linked_flag",
         "markettor_team"."session_recording_network_payload_capture_config",
         "markettor_team"."session_replay_config",
         "markettor_team"."capture_console_log_opt_in",
         "markettor_team"."capture_performance_opt_in",
         "markettor_team"."surveys_opt_in",
         "markettor_team"."heatmaps_opt_in",
         "markettor_team"."session_recording_version",
         "markettor_team"."signup_token",
         "markettor_team"."is_demo",
         "markettor_team"."access_control",
         "markettor_team"."week_start_day",
         "markettor_team"."inject_web_apps",
         "markettor_team"."test_account_filters",
         "markettor_team"."test_account_filters_default_checked",
         "markettor_team"."path_cleaning_filters",
         "markettor_team"."timezone",
         "markettor_team"."data_attributes",
         "markettor_team"."person_display_name_properties",
         "markettor_team"."live_events_columns",
         "markettor_team"."recording_domains",
         "markettor_team"."primary_dashboard_id",
         "markettor_team"."extra_settings",
         "markettor_team"."modifiers",
         "markettor_team"."correlation_config",
         "markettor_team"."session_recording_retention_period_days",
         "markettor_team"."plugins_opt_in",
         "markettor_team"."opt_out_capture",
         "markettor_team"."event_names",
         "markettor_team"."event_names_with_usage",
         "markettor_team"."event_properties",
         "markettor_team"."event_properties_with_usage",
         "markettor_team"."event_properties_numerical",
         "markettor_team"."external_data_workspace_id",
         "markettor_team"."external_data_workspace_last_synced_at"
  FROM "markettor_team"
  WHERE "markettor_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.15
  '''
  SELECT "markettor_organization"."id",
         "markettor_organization"."name",
         "markettor_organization"."slug",
         "markettor_organization"."logo_media_id",
         "markettor_organization"."created_at",
         "markettor_organization"."updated_at",
         "markettor_organization"."plugins_access_level",
         "markettor_organization"."for_internal_metrics",
         "markettor_organization"."is_member_join_email_enabled",
         "markettor_organization"."enforce_2fa",
         "markettor_organization"."is_hipaa",
         "markettor_organization"."customer_id",
         "markettor_organization"."available_product_features",
         "markettor_organization"."usage",
         "markettor_organization"."never_drop_data",
         "markettor_organization"."customer_trust_scores",
         "markettor_organization"."setup_section_2_completed",
         "markettor_organization"."personalization",
         "markettor_organization"."domain_whitelist"
  FROM "markettor_organization"
  WHERE "markettor_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 21
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.16
  '''
  SELECT "markettor_dashboard"."id",
         "markettor_dashboard"."name",
         "markettor_dashboard"."description",
         "markettor_dashboard"."team_id",
         "markettor_dashboard"."pinned",
         "markettor_dashboard"."created_at",
         "markettor_dashboard"."created_by_id",
         "markettor_dashboard"."deleted",
         "markettor_dashboard"."last_accessed_at",
         "markettor_dashboard"."filters",
         "markettor_dashboard"."creation_mode",
         "markettor_dashboard"."restriction_level",
         "markettor_dashboard"."deprecated_tags",
         "markettor_dashboard"."tags",
         "markettor_dashboard"."share_token",
         "markettor_dashboard"."is_shared"
  FROM "markettor_dashboard"
  INNER JOIN "markettor_dashboardtile" ON ("markettor_dashboard"."id" = "markettor_dashboardtile"."dashboard_id")
  WHERE (NOT ("markettor_dashboard"."deleted")
         AND "markettor_dashboardtile"."insight_id" = 2)
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.17
  '''
  SELECT "markettor_dashboardtile"."id",
         "markettor_dashboardtile"."dashboard_id",
         "markettor_dashboardtile"."insight_id",
         "markettor_dashboardtile"."text_id",
         "markettor_dashboardtile"."layouts",
         "markettor_dashboardtile"."color",
         "markettor_dashboardtile"."filters_hash",
         "markettor_dashboardtile"."last_refresh",
         "markettor_dashboardtile"."refreshing",
         "markettor_dashboardtile"."refresh_attempt",
         "markettor_dashboardtile"."deleted"
  FROM "markettor_dashboardtile"
  INNER JOIN "markettor_dashboard" ON ("markettor_dashboardtile"."dashboard_id" = "markettor_dashboard"."id")
  WHERE (NOT ("markettor_dashboardtile"."deleted"
              AND "markettor_dashboardtile"."deleted" IS NOT NULL)
         AND NOT ("markettor_dashboard"."deleted")
         AND "markettor_dashboardtile"."insight_id" = 2)
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.18
  '''
  SELECT "markettor_dashboardtile"."dashboard_id"
  FROM "markettor_dashboardtile"
  INNER JOIN "markettor_dashboard" ON ("markettor_dashboardtile"."dashboard_id" = "markettor_dashboard"."id")
  WHERE (NOT ("markettor_dashboardtile"."deleted"
              AND "markettor_dashboardtile"."deleted" IS NOT NULL)
         AND NOT ("markettor_dashboard"."deleted")
         AND "markettor_dashboardtile"."insight_id" = 2)
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.19
  '''
  SELECT "markettor_dashboard"."id",
         "markettor_dashboard"."name",
         "markettor_dashboard"."description",
         "markettor_dashboard"."team_id",
         "markettor_dashboard"."pinned",
         "markettor_dashboard"."created_at",
         "markettor_dashboard"."created_by_id",
         "markettor_dashboard"."deleted",
         "markettor_dashboard"."last_accessed_at",
         "markettor_dashboard"."filters",
         "markettor_dashboard"."creation_mode",
         "markettor_dashboard"."restriction_level",
         "markettor_dashboard"."deprecated_tags",
         "markettor_dashboard"."tags",
         "markettor_dashboard"."share_token",
         "markettor_dashboard"."is_shared"
  FROM "markettor_dashboard"
  WHERE (NOT ("markettor_dashboard"."deleted")
         AND "markettor_dashboard"."id" IN (1,
                                          2,
                                          3,
                                          4,
                                          5 /* ... */))
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.2
  '''
  SELECT "markettor_organizationmembership"."id",
         "markettor_organizationmembership"."organization_id",
         "markettor_organizationmembership"."user_id",
         "markettor_organizationmembership"."level",
         "markettor_organizationmembership"."joined_at",
         "markettor_organizationmembership"."updated_at",
         "markettor_organization"."id",
         "markettor_organization"."name",
         "markettor_organization"."slug",
         "markettor_organization"."logo_media_id",
         "markettor_organization"."created_at",
         "markettor_organization"."updated_at",
         "markettor_organization"."plugins_access_level",
         "markettor_organization"."for_internal_metrics",
         "markettor_organization"."is_member_join_email_enabled",
         "markettor_organization"."enforce_2fa",
         "markettor_organization"."is_hipaa",
         "markettor_organization"."customer_id",
         "markettor_organization"."available_product_features",
         "markettor_organization"."usage",
         "markettor_organization"."never_drop_data",
         "markettor_organization"."customer_trust_scores",
         "markettor_organization"."setup_section_2_completed",
         "markettor_organization"."personalization",
         "markettor_organization"."domain_whitelist"
  FROM "markettor_organizationmembership"
  INNER JOIN "markettor_organization" ON ("markettor_organizationmembership"."organization_id" = "markettor_organization"."id")
  WHERE "markettor_organizationmembership"."user_id" = 2
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.20
  '''
  SELECT COUNT(*) AS "__count"
  FROM "markettor_dashboarditem"
  WHERE NOT ("markettor_dashboarditem"."deleted")
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.21
  '''
  SELECT "markettor_user"."id",
         "markettor_user"."password",
         "markettor_user"."last_login",
         "markettor_user"."first_name",
         "markettor_user"."last_name",
         "markettor_user"."is_staff",
         "markettor_user"."is_active",
         "markettor_user"."date_joined",
         "markettor_user"."uuid",
         "markettor_user"."current_organization_id",
         "markettor_user"."current_team_id",
         "markettor_user"."email",
         "markettor_user"."pending_email",
         "markettor_user"."temporary_token",
         "markettor_user"."distinct_id",
         "markettor_user"."is_email_verified",
         "markettor_user"."has_seen_product_intro_for",
         "markettor_user"."strapi_id",
         "markettor_user"."theme_mode",
         "markettor_user"."partial_notification_settings",
         "markettor_user"."anonymize_data",
         "markettor_user"."toolbar_mode",
         "markettor_user"."hedgehog_config",
         "markettor_user"."events_column_config",
         "markettor_user"."email_opt_in"
  FROM "markettor_user"
  WHERE "markettor_user"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.22
  '''
  SELECT "markettor_team"."id",
         "markettor_team"."uuid",
         "markettor_team"."organization_id",
         "markettor_team"."project_id",
         "markettor_team"."api_token",
         "markettor_team"."app_urls",
         "markettor_team"."name",
         "markettor_team"."slack_incoming_webhook",
         "markettor_team"."created_at",
         "markettor_team"."updated_at",
         "markettor_team"."anonymize_ips",
         "markettor_team"."completed_snippet_onboarding",
         "markettor_team"."has_completed_onboarding_for",
         "markettor_team"."ingested_event",
         "markettor_team"."autocapture_opt_out",
         "markettor_team"."autocapture_web_vitals_opt_in",
         "markettor_team"."autocapture_web_vitals_allowed_metrics",
         "markettor_team"."autocapture_exceptions_opt_in",
         "markettor_team"."autocapture_exceptions_errors_to_ignore",
         "markettor_team"."session_recording_opt_in",
         "markettor_team"."session_recording_sample_rate",
         "markettor_team"."session_recording_minimum_duration_milliseconds",
         "markettor_team"."session_recording_linked_flag",
         "markettor_team"."session_recording_network_payload_capture_config",
         "markettor_team"."session_replay_config",
         "markettor_team"."capture_console_log_opt_in",
         "markettor_team"."capture_performance_opt_in",
         "markettor_team"."surveys_opt_in",
         "markettor_team"."heatmaps_opt_in",
         "markettor_team"."session_recording_version",
         "markettor_team"."signup_token",
         "markettor_team"."is_demo",
         "markettor_team"."access_control",
         "markettor_team"."week_start_day",
         "markettor_team"."inject_web_apps",
         "markettor_team"."test_account_filters",
         "markettor_team"."test_account_filters_default_checked",
         "markettor_team"."path_cleaning_filters",
         "markettor_team"."timezone",
         "markettor_team"."data_attributes",
         "markettor_team"."person_display_name_properties",
         "markettor_team"."live_events_columns",
         "markettor_team"."recording_domains",
         "markettor_team"."primary_dashboard_id",
         "markettor_team"."extra_settings",
         "markettor_team"."modifiers",
         "markettor_team"."correlation_config",
         "markettor_team"."session_recording_retention_period_days",
         "markettor_team"."external_data_workspace_id",
         "markettor_team"."external_data_workspace_last_synced_at"
  FROM "markettor_team"
  WHERE "markettor_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.23
  '''
  SELECT "markettor_organizationmembership"."id",
         "markettor_organizationmembership"."organization_id",
         "markettor_organizationmembership"."user_id",
         "markettor_organizationmembership"."level",
         "markettor_organizationmembership"."joined_at",
         "markettor_organizationmembership"."updated_at",
         "markettor_organization"."id",
         "markettor_organization"."name",
         "markettor_organization"."slug",
         "markettor_organization"."logo_media_id",
         "markettor_organization"."created_at",
         "markettor_organization"."updated_at",
         "markettor_organization"."plugins_access_level",
         "markettor_organization"."for_internal_metrics",
         "markettor_organization"."is_member_join_email_enabled",
         "markettor_organization"."enforce_2fa",
         "markettor_organization"."is_hipaa",
         "markettor_organization"."customer_id",
         "markettor_organization"."available_product_features",
         "markettor_organization"."usage",
         "markettor_organization"."never_drop_data",
         "markettor_organization"."customer_trust_scores",
         "markettor_organization"."setup_section_2_completed",
         "markettor_organization"."personalization",
         "markettor_organization"."domain_whitelist"
  FROM "markettor_organizationmembership"
  INNER JOIN "markettor_organization" ON ("markettor_organizationmembership"."organization_id" = "markettor_organization"."id")
  WHERE "markettor_organizationmembership"."user_id" = 2
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.24
  '''
  SELECT "markettor_organization"."id",
         "markettor_organization"."name",
         "markettor_organization"."slug",
         "markettor_organization"."logo_media_id",
         "markettor_organization"."created_at",
         "markettor_organization"."updated_at",
         "markettor_organization"."plugins_access_level",
         "markettor_organization"."for_internal_metrics",
         "markettor_organization"."is_member_join_email_enabled",
         "markettor_organization"."enforce_2fa",
         "markettor_organization"."is_hipaa",
         "markettor_organization"."customer_id",
         "markettor_organization"."available_product_features",
         "markettor_organization"."usage",
         "markettor_organization"."never_drop_data",
         "markettor_organization"."customer_trust_scores",
         "markettor_organization"."setup_section_2_completed",
         "markettor_organization"."personalization",
         "markettor_organization"."domain_whitelist"
  FROM "markettor_organization"
  WHERE "markettor_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 21
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.25
  '''
  SELECT COUNT(*) AS "__count"
  FROM "markettor_dashboarditem"
  INNER JOIN "markettor_team" ON ("markettor_dashboarditem"."team_id" = "markettor_team"."id")
  WHERE (NOT ("markettor_dashboarditem"."deleted")
         AND "markettor_team"."project_id" = 2)
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.26
  '''
  SELECT "markettor_dashboarditem"."id",
         "markettor_dashboarditem"."name",
         "markettor_dashboarditem"."derived_name",
         "markettor_dashboarditem"."description",
         "markettor_dashboarditem"."team_id",
         "markettor_dashboarditem"."filters",
         "markettor_dashboarditem"."filters_hash",
         "markettor_dashboarditem"."query",
         "markettor_dashboarditem"."order",
         "markettor_dashboarditem"."deleted",
         "markettor_dashboarditem"."saved",
         "markettor_dashboarditem"."created_at",
         "markettor_dashboarditem"."refreshing",
         "markettor_dashboarditem"."created_by_id",
         "markettor_dashboarditem"."is_sample",
         "markettor_dashboarditem"."short_id",
         "markettor_dashboarditem"."favorited",
         "markettor_dashboarditem"."refresh_attempt",
         "markettor_dashboarditem"."last_modified_at",
         "markettor_dashboarditem"."last_modified_by_id",
         "markettor_dashboarditem"."dashboard_id",
         "markettor_dashboarditem"."last_refresh",
         "markettor_dashboarditem"."layouts",
         "markettor_dashboarditem"."color",
         "markettor_dashboarditem"."dive_dashboard_id",
         "markettor_dashboarditem"."updated_at",
         "markettor_dashboarditem"."deprecated_tags",
         "markettor_dashboarditem"."tags",
         "markettor_team"."id",
         "markettor_team"."uuid",
         "markettor_team"."organization_id",
         "markettor_team"."project_id",
         "markettor_team"."api_token",
         "markettor_team"."app_urls",
         "markettor_team"."name",
         "markettor_team"."slack_incoming_webhook",
         "markettor_team"."created_at",
         "markettor_team"."updated_at",
         "markettor_team"."anonymize_ips",
         "markettor_team"."completed_snippet_onboarding",
         "markettor_team"."has_completed_onboarding_for",
         "markettor_team"."ingested_event",
         "markettor_team"."autocapture_opt_out",
         "markettor_team"."autocapture_web_vitals_opt_in",
         "markettor_team"."autocapture_web_vitals_allowed_metrics",
         "markettor_team"."autocapture_exceptions_opt_in",
         "markettor_team"."autocapture_exceptions_errors_to_ignore",
         "markettor_team"."session_recording_opt_in",
         "markettor_team"."session_recording_sample_rate",
         "markettor_team"."session_recording_minimum_duration_milliseconds",
         "markettor_team"."session_recording_linked_flag",
         "markettor_team"."session_recording_network_payload_capture_config",
         "markettor_team"."session_replay_config",
         "markettor_team"."capture_console_log_opt_in",
         "markettor_team"."capture_performance_opt_in",
         "markettor_team"."surveys_opt_in",
         "markettor_team"."heatmaps_opt_in",
         "markettor_team"."session_recording_version",
         "markettor_team"."signup_token",
         "markettor_team"."is_demo",
         "markettor_team"."access_control",
         "markettor_team"."week_start_day",
         "markettor_team"."inject_web_apps",
         "markettor_team"."test_account_filters",
         "markettor_team"."test_account_filters_default_checked",
         "markettor_team"."path_cleaning_filters",
         "markettor_team"."timezone",
         "markettor_team"."data_attributes",
         "markettor_team"."person_display_name_properties",
         "markettor_team"."live_events_columns",
         "markettor_team"."recording_domains",
         "markettor_team"."primary_dashboard_id",
         "markettor_team"."extra_settings",
         "markettor_team"."modifiers",
         "markettor_team"."correlation_config",
         "markettor_team"."session_recording_retention_period_days",
         "markettor_team"."plugins_opt_in",
         "markettor_team"."opt_out_capture",
         "markettor_team"."event_names",
         "markettor_team"."event_names_with_usage",
         "markettor_team"."event_properties",
         "markettor_team"."event_properties_with_usage",
         "markettor_team"."event_properties_numerical",
         "markettor_team"."external_data_workspace_id",
         "markettor_team"."external_data_workspace_last_synced_at",
         "markettor_user"."id",
         "markettor_user"."password",
         "markettor_user"."last_login",
         "markettor_user"."first_name",
         "markettor_user"."last_name",
         "markettor_user"."is_staff",
         "markettor_user"."is_active",
         "markettor_user"."date_joined",
         "markettor_user"."uuid",
         "markettor_user"."current_organization_id",
         "markettor_user"."current_team_id",
         "markettor_user"."email",
         "markettor_user"."pending_email",
         "markettor_user"."temporary_token",
         "markettor_user"."distinct_id",
         "markettor_user"."is_email_verified",
         "markettor_user"."requested_password_reset_at",
         "markettor_user"."has_seen_product_intro_for",
         "markettor_user"."strapi_id",
         "markettor_user"."theme_mode",
         "markettor_user"."partial_notification_settings",
         "markettor_user"."anonymize_data",
         "markettor_user"."toolbar_mode",
         "markettor_user"."hedgehog_config",
         "markettor_user"."events_column_config",
         "markettor_user"."email_opt_in",
         T5."id",
         T5."password",
         T5."last_login",
         T5."first_name",
         T5."last_name",
         T5."is_staff",
         T5."is_active",
         T5."date_joined",
         T5."uuid",
         T5."current_organization_id",
         T5."current_team_id",
         T5."email",
         T5."pending_email",
         T5."temporary_token",
         T5."distinct_id",
         T5."is_email_verified",
         T5."requested_password_reset_at",
         T5."has_seen_product_intro_for",
         T5."strapi_id",
         T5."theme_mode",
         T5."partial_notification_settings",
         T5."anonymize_data",
         T5."toolbar_mode",
         T5."hedgehog_config",
         T5."events_column_config",
         T5."email_opt_in"
  FROM "markettor_dashboarditem"
  INNER JOIN "markettor_team" ON ("markettor_dashboarditem"."team_id" = "markettor_team"."id")
  LEFT OUTER JOIN "markettor_user" ON ("markettor_dashboarditem"."created_by_id" = "markettor_user"."id")
  LEFT OUTER JOIN "markettor_user" T5 ON ("markettor_dashboarditem"."last_modified_by_id" = T5."id")
  WHERE (NOT ("markettor_dashboarditem"."deleted")
         AND "markettor_team"."project_id" = 2)
  ORDER BY "markettor_dashboarditem"."order" ASC
  LIMIT 100
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.27
  '''
  SELECT ("markettor_dashboardtile"."insight_id") AS "_prefetch_related_val_insight_id",
         "markettor_dashboard"."id",
         "markettor_dashboard"."name",
         "markettor_dashboard"."description",
         "markettor_dashboard"."team_id",
         "markettor_dashboard"."pinned",
         "markettor_dashboard"."created_at",
         "markettor_dashboard"."created_by_id",
         "markettor_dashboard"."deleted",
         "markettor_dashboard"."last_accessed_at",
         "markettor_dashboard"."filters",
         "markettor_dashboard"."creation_mode",
         "markettor_dashboard"."restriction_level",
         "markettor_dashboard"."deprecated_tags",
         "markettor_dashboard"."tags",
         "markettor_dashboard"."share_token",
         "markettor_dashboard"."is_shared",
         "markettor_team"."id",
         "markettor_team"."uuid",
         "markettor_team"."organization_id",
         "markettor_team"."project_id",
         "markettor_team"."api_token",
         "markettor_team"."app_urls",
         "markettor_team"."name",
         "markettor_team"."slack_incoming_webhook",
         "markettor_team"."created_at",
         "markettor_team"."updated_at",
         "markettor_team"."anonymize_ips",
         "markettor_team"."completed_snippet_onboarding",
         "markettor_team"."has_completed_onboarding_for",
         "markettor_team"."ingested_event",
         "markettor_team"."autocapture_opt_out",
         "markettor_team"."autocapture_web_vitals_opt_in",
         "markettor_team"."autocapture_web_vitals_allowed_metrics",
         "markettor_team"."autocapture_exceptions_opt_in",
         "markettor_team"."autocapture_exceptions_errors_to_ignore",
         "markettor_team"."session_recording_opt_in",
         "markettor_team"."session_recording_sample_rate",
         "markettor_team"."session_recording_minimum_duration_milliseconds",
         "markettor_team"."session_recording_linked_flag",
         "markettor_team"."session_recording_network_payload_capture_config",
         "markettor_team"."session_replay_config",
         "markettor_team"."capture_console_log_opt_in",
         "markettor_team"."capture_performance_opt_in",
         "markettor_team"."surveys_opt_in",
         "markettor_team"."heatmaps_opt_in",
         "markettor_team"."session_recording_version",
         "markettor_team"."signup_token",
         "markettor_team"."is_demo",
         "markettor_team"."access_control",
         "markettor_team"."week_start_day",
         "markettor_team"."inject_web_apps",
         "markettor_team"."test_account_filters",
         "markettor_team"."test_account_filters_default_checked",
         "markettor_team"."path_cleaning_filters",
         "markettor_team"."timezone",
         "markettor_team"."data_attributes",
         "markettor_team"."person_display_name_properties",
         "markettor_team"."live_events_columns",
         "markettor_team"."recording_domains",
         "markettor_team"."primary_dashboard_id",
         "markettor_team"."extra_settings",
         "markettor_team"."modifiers",
         "markettor_team"."correlation_config",
         "markettor_team"."session_recording_retention_period_days",
         "markettor_team"."plugins_opt_in",
         "markettor_team"."opt_out_capture",
         "markettor_team"."event_names",
         "markettor_team"."event_names_with_usage",
         "markettor_team"."event_properties",
         "markettor_team"."event_properties_with_usage",
         "markettor_team"."event_properties_numerical",
         "markettor_team"."external_data_workspace_id",
         "markettor_team"."external_data_workspace_last_synced_at",
         "markettor_organization"."id",
         "markettor_organization"."name",
         "markettor_organization"."slug",
         "markettor_organization"."logo_media_id",
         "markettor_organization"."created_at",
         "markettor_organization"."updated_at",
         "markettor_organization"."plugins_access_level",
         "markettor_organization"."for_internal_metrics",
         "markettor_organization"."is_member_join_email_enabled",
         "markettor_organization"."enforce_2fa",
         "markettor_organization"."is_hipaa",
         "markettor_organization"."customer_id",
         "markettor_organization"."available_product_features",
         "markettor_organization"."usage",
         "markettor_organization"."never_drop_data",
         "markettor_organization"."customer_trust_scores",
         "markettor_organization"."setup_section_2_completed",
         "markettor_organization"."personalization",
         "markettor_organization"."domain_whitelist"
  FROM "markettor_dashboard"
  INNER JOIN "markettor_dashboardtile" ON ("markettor_dashboard"."id" = "markettor_dashboardtile"."dashboard_id")
  INNER JOIN "markettor_team" ON ("markettor_dashboard"."team_id" = "markettor_team"."id")
  INNER JOIN "markettor_organization" ON ("markettor_team"."organization_id" = "markettor_organization"."id")
  WHERE (NOT ("markettor_dashboard"."deleted")
         AND "markettor_dashboardtile"."insight_id" IN (1,
                                                      2,
                                                      3,
                                                      4,
                                                      5 /* ... */))
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.28
  '''
  SELECT "markettor_dashboardtile"."id",
         "markettor_dashboardtile"."dashboard_id",
         "markettor_dashboardtile"."insight_id",
         "markettor_dashboardtile"."text_id",
         "markettor_dashboardtile"."layouts",
         "markettor_dashboardtile"."color",
         "markettor_dashboardtile"."filters_hash",
         "markettor_dashboardtile"."last_refresh",
         "markettor_dashboardtile"."refreshing",
         "markettor_dashboardtile"."refresh_attempt",
         "markettor_dashboardtile"."deleted",
         "markettor_dashboard"."id",
         "markettor_dashboard"."name",
         "markettor_dashboard"."description",
         "markettor_dashboard"."team_id",
         "markettor_dashboard"."pinned",
         "markettor_dashboard"."created_at",
         "markettor_dashboard"."created_by_id",
         "markettor_dashboard"."deleted",
         "markettor_dashboard"."last_accessed_at",
         "markettor_dashboard"."filters",
         "markettor_dashboard"."creation_mode",
         "markettor_dashboard"."restriction_level",
         "markettor_dashboard"."deprecated_tags",
         "markettor_dashboard"."tags",
         "markettor_dashboard"."share_token",
         "markettor_dashboard"."is_shared",
         "markettor_team"."id",
         "markettor_team"."uuid",
         "markettor_team"."organization_id",
         "markettor_team"."project_id",
         "markettor_team"."api_token",
         "markettor_team"."app_urls",
         "markettor_team"."name",
         "markettor_team"."slack_incoming_webhook",
         "markettor_team"."created_at",
         "markettor_team"."updated_at",
         "markettor_team"."anonymize_ips",
         "markettor_team"."completed_snippet_onboarding",
         "markettor_team"."has_completed_onboarding_for",
         "markettor_team"."ingested_event",
         "markettor_team"."autocapture_opt_out",
         "markettor_team"."autocapture_web_vitals_opt_in",
         "markettor_team"."autocapture_web_vitals_allowed_metrics",
         "markettor_team"."autocapture_exceptions_opt_in",
         "markettor_team"."autocapture_exceptions_errors_to_ignore",
         "markettor_team"."session_recording_opt_in",
         "markettor_team"."session_recording_sample_rate",
         "markettor_team"."session_recording_minimum_duration_milliseconds",
         "markettor_team"."session_recording_linked_flag",
         "markettor_team"."session_recording_network_payload_capture_config",
         "markettor_team"."session_replay_config",
         "markettor_team"."capture_console_log_opt_in",
         "markettor_team"."capture_performance_opt_in",
         "markettor_team"."surveys_opt_in",
         "markettor_team"."heatmaps_opt_in",
         "markettor_team"."session_recording_version",
         "markettor_team"."signup_token",
         "markettor_team"."is_demo",
         "markettor_team"."access_control",
         "markettor_team"."week_start_day",
         "markettor_team"."inject_web_apps",
         "markettor_team"."test_account_filters",
         "markettor_team"."test_account_filters_default_checked",
         "markettor_team"."path_cleaning_filters",
         "markettor_team"."timezone",
         "markettor_team"."data_attributes",
         "markettor_team"."person_display_name_properties",
         "markettor_team"."live_events_columns",
         "markettor_team"."recording_domains",
         "markettor_team"."primary_dashboard_id",
         "markettor_team"."extra_settings",
         "markettor_team"."modifiers",
         "markettor_team"."correlation_config",
         "markettor_team"."session_recording_retention_period_days",
         "markettor_team"."plugins_opt_in",
         "markettor_team"."opt_out_capture",
         "markettor_team"."event_names",
         "markettor_team"."event_names_with_usage",
         "markettor_team"."event_properties",
         "markettor_team"."event_properties_with_usage",
         "markettor_team"."event_properties_numerical",
         "markettor_team"."external_data_workspace_id",
         "markettor_team"."external_data_workspace_last_synced_at",
         "markettor_organization"."id",
         "markettor_organization"."name",
         "markettor_organization"."slug",
         "markettor_organization"."logo_media_id",
         "markettor_organization"."created_at",
         "markettor_organization"."updated_at",
         "markettor_organization"."plugins_access_level",
         "markettor_organization"."for_internal_metrics",
         "markettor_organization"."is_member_join_email_enabled",
         "markettor_organization"."enforce_2fa",
         "markettor_organization"."is_hipaa",
         "markettor_organization"."customer_id",
         "markettor_organization"."available_product_features",
         "markettor_organization"."usage",
         "markettor_organization"."never_drop_data",
         "markettor_organization"."customer_trust_scores",
         "markettor_organization"."setup_section_2_completed",
         "markettor_organization"."personalization",
         "markettor_organization"."domain_whitelist"
  FROM "markettor_dashboardtile"
  INNER JOIN "markettor_dashboard" ON ("markettor_dashboardtile"."dashboard_id" = "markettor_dashboard"."id")
  INNER JOIN "markettor_team" ON ("markettor_dashboard"."team_id" = "markettor_team"."id")
  INNER JOIN "markettor_organization" ON ("markettor_team"."organization_id" = "markettor_organization"."id")
  WHERE (NOT ("markettor_dashboardtile"."deleted"
              AND "markettor_dashboardtile"."deleted" IS NOT NULL)
         AND NOT ("markettor_dashboard"."deleted")
         AND "markettor_dashboardtile"."insight_id" IN (1,
                                                      2,
                                                      3,
                                                      4,
                                                      5 /* ... */))
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.29
  '''
  SELECT "markettor_taggeditem"."id",
         "markettor_taggeditem"."tag_id",
         "markettor_taggeditem"."dashboard_id",
         "markettor_taggeditem"."insight_id",
         "markettor_taggeditem"."event_definition_id",
         "markettor_taggeditem"."property_definition_id",
         "markettor_taggeditem"."action_id",
         "markettor_taggeditem"."feature_flag_id"
  FROM "markettor_taggeditem"
  WHERE "markettor_taggeditem"."insight_id" IN (1,
                                              2,
                                              3,
                                              4,
                                              5 /* ... */)
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.3
  '''
  SELECT "markettor_dashboard"."id",
         "markettor_dashboard"."name",
         "markettor_dashboard"."description",
         "markettor_dashboard"."team_id",
         "markettor_dashboard"."pinned",
         "markettor_dashboard"."created_at",
         "markettor_dashboard"."created_by_id",
         "markettor_dashboard"."deleted",
         "markettor_dashboard"."last_accessed_at",
         "markettor_dashboard"."filters",
         "markettor_dashboard"."creation_mode",
         "markettor_dashboard"."restriction_level",
         "markettor_dashboard"."deprecated_tags",
         "markettor_dashboard"."tags",
         "markettor_dashboard"."share_token",
         "markettor_dashboard"."is_shared"
  FROM "markettor_dashboard"
  WHERE (NOT ("markettor_dashboard"."deleted")
         AND "markettor_dashboard"."id" = 2)
  LIMIT 21
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.30
  '''
  SELECT "markettor_taggeditem"."id",
         "markettor_taggeditem"."tag_id",
         "markettor_taggeditem"."dashboard_id",
         "markettor_taggeditem"."insight_id",
         "markettor_taggeditem"."event_definition_id",
         "markettor_taggeditem"."property_definition_id",
         "markettor_taggeditem"."action_id",
         "markettor_taggeditem"."feature_flag_id"
  FROM "markettor_taggeditem"
  WHERE "markettor_taggeditem"."insight_id" IN (1,
                                              2,
                                              3,
                                              4,
                                              5 /* ... */)
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.4
  '''
  SELECT "markettor_team"."id",
         "markettor_team"."uuid",
         "markettor_team"."organization_id",
         "markettor_team"."project_id",
         "markettor_team"."api_token",
         "markettor_team"."app_urls",
         "markettor_team"."name",
         "markettor_team"."slack_incoming_webhook",
         "markettor_team"."created_at",
         "markettor_team"."updated_at",
         "markettor_team"."anonymize_ips",
         "markettor_team"."completed_snippet_onboarding",
         "markettor_team"."has_completed_onboarding_for",
         "markettor_team"."ingested_event",
         "markettor_team"."autocapture_opt_out",
         "markettor_team"."autocapture_web_vitals_opt_in",
         "markettor_team"."autocapture_web_vitals_allowed_metrics",
         "markettor_team"."autocapture_exceptions_opt_in",
         "markettor_team"."autocapture_exceptions_errors_to_ignore",
         "markettor_team"."session_recording_opt_in",
         "markettor_team"."session_recording_sample_rate",
         "markettor_team"."session_recording_minimum_duration_milliseconds",
         "markettor_team"."session_recording_linked_flag",
         "markettor_team"."session_recording_network_payload_capture_config",
         "markettor_team"."session_replay_config",
         "markettor_team"."capture_console_log_opt_in",
         "markettor_team"."capture_performance_opt_in",
         "markettor_team"."surveys_opt_in",
         "markettor_team"."heatmaps_opt_in",
         "markettor_team"."session_recording_version",
         "markettor_team"."signup_token",
         "markettor_team"."is_demo",
         "markettor_team"."access_control",
         "markettor_team"."week_start_day",
         "markettor_team"."inject_web_apps",
         "markettor_team"."test_account_filters",
         "markettor_team"."test_account_filters_default_checked",
         "markettor_team"."path_cleaning_filters",
         "markettor_team"."timezone",
         "markettor_team"."data_attributes",
         "markettor_team"."person_display_name_properties",
         "markettor_team"."live_events_columns",
         "markettor_team"."recording_domains",
         "markettor_team"."primary_dashboard_id",
         "markettor_team"."extra_settings",
         "markettor_team"."modifiers",
         "markettor_team"."correlation_config",
         "markettor_team"."session_recording_retention_period_days",
         "markettor_team"."external_data_workspace_id",
         "markettor_team"."external_data_workspace_last_synced_at"
  FROM "markettor_team"
  WHERE "markettor_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.5
  '''
  SELECT "markettor_dashboarditem"."id",
         "markettor_dashboarditem"."name",
         "markettor_dashboarditem"."derived_name",
         "markettor_dashboarditem"."description",
         "markettor_dashboarditem"."team_id",
         "markettor_dashboarditem"."filters",
         "markettor_dashboarditem"."filters_hash",
         "markettor_dashboarditem"."query",
         "markettor_dashboarditem"."order",
         "markettor_dashboarditem"."deleted",
         "markettor_dashboarditem"."saved",
         "markettor_dashboarditem"."created_at",
         "markettor_dashboarditem"."refreshing",
         "markettor_dashboarditem"."created_by_id",
         "markettor_dashboarditem"."is_sample",
         "markettor_dashboarditem"."short_id",
         "markettor_dashboarditem"."favorited",
         "markettor_dashboarditem"."refresh_attempt",
         "markettor_dashboarditem"."last_modified_at",
         "markettor_dashboarditem"."last_modified_by_id",
         "markettor_dashboarditem"."dashboard_id",
         "markettor_dashboarditem"."last_refresh",
         "markettor_dashboarditem"."layouts",
         "markettor_dashboarditem"."color",
         "markettor_dashboarditem"."dive_dashboard_id",
         "markettor_dashboarditem"."updated_at",
         "markettor_dashboarditem"."deprecated_tags",
         "markettor_dashboarditem"."tags"
  FROM "markettor_dashboarditem"
  WHERE "markettor_dashboarditem"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.6
  '''
  SELECT "markettor_team"."id",
         "markettor_team"."uuid",
         "markettor_team"."organization_id",
         "markettor_team"."project_id",
         "markettor_team"."api_token",
         "markettor_team"."app_urls",
         "markettor_team"."name",
         "markettor_team"."slack_incoming_webhook",
         "markettor_team"."created_at",
         "markettor_team"."updated_at",
         "markettor_team"."anonymize_ips",
         "markettor_team"."completed_snippet_onboarding",
         "markettor_team"."has_completed_onboarding_for",
         "markettor_team"."ingested_event",
         "markettor_team"."autocapture_opt_out",
         "markettor_team"."autocapture_web_vitals_opt_in",
         "markettor_team"."autocapture_web_vitals_allowed_metrics",
         "markettor_team"."autocapture_exceptions_opt_in",
         "markettor_team"."autocapture_exceptions_errors_to_ignore",
         "markettor_team"."session_recording_opt_in",
         "markettor_team"."session_recording_sample_rate",
         "markettor_team"."session_recording_minimum_duration_milliseconds",
         "markettor_team"."session_recording_linked_flag",
         "markettor_team"."session_recording_network_payload_capture_config",
         "markettor_team"."session_replay_config",
         "markettor_team"."capture_console_log_opt_in",
         "markettor_team"."capture_performance_opt_in",
         "markettor_team"."surveys_opt_in",
         "markettor_team"."heatmaps_opt_in",
         "markettor_team"."session_recording_version",
         "markettor_team"."signup_token",
         "markettor_team"."is_demo",
         "markettor_team"."access_control",
         "markettor_team"."week_start_day",
         "markettor_team"."inject_web_apps",
         "markettor_team"."test_account_filters",
         "markettor_team"."test_account_filters_default_checked",
         "markettor_team"."path_cleaning_filters",
         "markettor_team"."timezone",
         "markettor_team"."data_attributes",
         "markettor_team"."person_display_name_properties",
         "markettor_team"."live_events_columns",
         "markettor_team"."recording_domains",
         "markettor_team"."primary_dashboard_id",
         "markettor_team"."extra_settings",
         "markettor_team"."modifiers",
         "markettor_team"."correlation_config",
         "markettor_team"."session_recording_retention_period_days",
         "markettor_team"."plugins_opt_in",
         "markettor_team"."opt_out_capture",
         "markettor_team"."event_names",
         "markettor_team"."event_names_with_usage",
         "markettor_team"."event_properties",
         "markettor_team"."event_properties_with_usage",
         "markettor_team"."event_properties_numerical",
         "markettor_team"."external_data_workspace_id",
         "markettor_team"."external_data_workspace_last_synced_at"
  FROM "markettor_team"
  WHERE "markettor_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.7
  '''
  SELECT "markettor_dashboard"."id",
         "markettor_dashboard"."name",
         "markettor_dashboard"."description",
         "markettor_dashboard"."team_id",
         "markettor_dashboard"."pinned",
         "markettor_dashboard"."created_at",
         "markettor_dashboard"."created_by_id",
         "markettor_dashboard"."deleted",
         "markettor_dashboard"."last_accessed_at",
         "markettor_dashboard"."filters",
         "markettor_dashboard"."creation_mode",
         "markettor_dashboard"."restriction_level",
         "markettor_dashboard"."deprecated_tags",
         "markettor_dashboard"."tags",
         "markettor_dashboard"."share_token",
         "markettor_dashboard"."is_shared"
  FROM "markettor_dashboard"
  WHERE (NOT ("markettor_dashboard"."deleted")
         AND "markettor_dashboard"."id" IN (1,
                                          2,
                                          3,
                                          4,
                                          5 /* ... */))
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.8
  '''
  SELECT "markettor_team"."id",
         "markettor_team"."uuid",
         "markettor_team"."organization_id",
         "markettor_team"."project_id",
         "markettor_team"."api_token",
         "markettor_team"."app_urls",
         "markettor_team"."name",
         "markettor_team"."slack_incoming_webhook",
         "markettor_team"."created_at",
         "markettor_team"."updated_at",
         "markettor_team"."anonymize_ips",
         "markettor_team"."completed_snippet_onboarding",
         "markettor_team"."has_completed_onboarding_for",
         "markettor_team"."ingested_event",
         "markettor_team"."autocapture_opt_out",
         "markettor_team"."autocapture_web_vitals_opt_in",
         "markettor_team"."autocapture_web_vitals_allowed_metrics",
         "markettor_team"."autocapture_exceptions_opt_in",
         "markettor_team"."autocapture_exceptions_errors_to_ignore",
         "markettor_team"."session_recording_opt_in",
         "markettor_team"."session_recording_sample_rate",
         "markettor_team"."session_recording_minimum_duration_milliseconds",
         "markettor_team"."session_recording_linked_flag",
         "markettor_team"."session_recording_network_payload_capture_config",
         "markettor_team"."session_replay_config",
         "markettor_team"."capture_console_log_opt_in",
         "markettor_team"."capture_performance_opt_in",
         "markettor_team"."surveys_opt_in",
         "markettor_team"."heatmaps_opt_in",
         "markettor_team"."session_recording_version",
         "markettor_team"."signup_token",
         "markettor_team"."is_demo",
         "markettor_team"."access_control",
         "markettor_team"."week_start_day",
         "markettor_team"."inject_web_apps",
         "markettor_team"."test_account_filters",
         "markettor_team"."test_account_filters_default_checked",
         "markettor_team"."path_cleaning_filters",
         "markettor_team"."timezone",
         "markettor_team"."data_attributes",
         "markettor_team"."person_display_name_properties",
         "markettor_team"."live_events_columns",
         "markettor_team"."recording_domains",
         "markettor_team"."primary_dashboard_id",
         "markettor_team"."extra_settings",
         "markettor_team"."modifiers",
         "markettor_team"."correlation_config",
         "markettor_team"."session_recording_retention_period_days",
         "markettor_team"."plugins_opt_in",
         "markettor_team"."opt_out_capture",
         "markettor_team"."event_names",
         "markettor_team"."event_names_with_usage",
         "markettor_team"."event_properties",
         "markettor_team"."event_properties_with_usage",
         "markettor_team"."event_properties_numerical",
         "markettor_team"."external_data_workspace_id",
         "markettor_team"."external_data_workspace_last_synced_at"
  FROM "markettor_team"
  WHERE "markettor_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestInsight.test_listing_insights_does_not_nplus1.9
  '''
  SELECT "markettor_team"."id",
         "markettor_team"."uuid",
         "markettor_team"."organization_id",
         "markettor_team"."project_id",
         "markettor_team"."api_token",
         "markettor_team"."app_urls",
         "markettor_team"."name",
         "markettor_team"."slack_incoming_webhook",
         "markettor_team"."created_at",
         "markettor_team"."updated_at",
         "markettor_team"."anonymize_ips",
         "markettor_team"."completed_snippet_onboarding",
         "markettor_team"."has_completed_onboarding_for",
         "markettor_team"."ingested_event",
         "markettor_team"."autocapture_opt_out",
         "markettor_team"."autocapture_web_vitals_opt_in",
         "markettor_team"."autocapture_web_vitals_allowed_metrics",
         "markettor_team"."autocapture_exceptions_opt_in",
         "markettor_team"."autocapture_exceptions_errors_to_ignore",
         "markettor_team"."session_recording_opt_in",
         "markettor_team"."session_recording_sample_rate",
         "markettor_team"."session_recording_minimum_duration_milliseconds",
         "markettor_team"."session_recording_linked_flag",
         "markettor_team"."session_recording_network_payload_capture_config",
         "markettor_team"."session_replay_config",
         "markettor_team"."capture_console_log_opt_in",
         "markettor_team"."capture_performance_opt_in",
         "markettor_team"."surveys_opt_in",
         "markettor_team"."heatmaps_opt_in",
         "markettor_team"."session_recording_version",
         "markettor_team"."signup_token",
         "markettor_team"."is_demo",
         "markettor_team"."access_control",
         "markettor_team"."week_start_day",
         "markettor_team"."inject_web_apps",
         "markettor_team"."test_account_filters",
         "markettor_team"."test_account_filters_default_checked",
         "markettor_team"."path_cleaning_filters",
         "markettor_team"."timezone",
         "markettor_team"."data_attributes",
         "markettor_team"."person_display_name_properties",
         "markettor_team"."live_events_columns",
         "markettor_team"."recording_domains",
         "markettor_team"."primary_dashboard_id",
         "markettor_team"."extra_settings",
         "markettor_team"."modifiers",
         "markettor_team"."correlation_config",
         "markettor_team"."session_recording_retention_period_days",
         "markettor_team"."plugins_opt_in",
         "markettor_team"."opt_out_capture",
         "markettor_team"."event_names",
         "markettor_team"."event_names_with_usage",
         "markettor_team"."event_properties",
         "markettor_team"."event_properties_with_usage",
         "markettor_team"."event_properties_numerical",
         "markettor_team"."external_data_workspace_id",
         "markettor_team"."external_data_workspace_last_synced_at"
  FROM "markettor_team"
  WHERE "markettor_team"."id" = 2
  LIMIT 21
  '''
# ---
